--- a/03 - HelloSecurity/pom.xml
+++ b/03 - HelloSecurity/pom.xml
@@ -27,8 +27,8 @@
 		</plugins>
 	</build>
 	<properties>
-		<spring.version>3.2.13.RELEASE</spring.version>
-		<spring-security.version>3.2.7.RELEASE</spring-security.version>
+		<spring.version>4.0.6.RELEASE</spring.version>
+		<spring-security.version>4.1.5.RELEASE</spring-security.version>
 		<jstl.version>1.2</jstl.version>
 		<log4j.version>1.2.17</log4j.version>
 		<apache.commons>3.4</apache.commons>
@@ -89,6 +89,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
